--- a/src/website/templates/website/order.html
+++ b/src/website/templates/website/order.html
@@ -1,4 +1,5 @@
 {% extends  'website/base.html' %}
+{% load crispy_forms_filters %}
 {% load custom_tags %}
 {% load crispy_forms_tags %}
 {% load static %}
@@ -8,272 +9,96 @@
 
     <section class=" mt-4 clearfix aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
         <div class="container">
-            <!-- Billing info start -->
-            <div class="billing_form mb_50">
-                <h3 class="form_title mb_30">Billing details</h3>
-                {% if not buyer_address %}
-                    <form action="#">
-                        <div class="form_wrap card">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="form_item">
-                                        <span class="input_title">First Name<sup>*</sup></span>
-                                        <input type="text" name="first_name">
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-6">
-                                    <div class="form_item">
-                                        <span class="input_title">Last Name<sup>*</sup></span>
-                                        <input type="text" name="last_name">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form_item">
-                                <span class="input_title">Email Address<sup>*</sup></span>
-                                <input type="text" name="email_address">
-                            </div>
-
-                            <div class="form_item">
-                                <span class="input_title">Phone Number<sup>*</sup></span>
-                                <input type="text" name="phone_number" placeholder="Your Personal Phone Number">
-                            </div>
-
-                            <div class="form_item">
-                                <span class="input_title">City<sup>*</sup></span>
-                                <input type="text" name="city">
-                            </div>
-
-                            <div class="form_item">
-                                <span class="input_title">State<sup>*</sup></span>
-                                <input type="text" name="state">
-                            </div>
-
-                            <div class="form_item">
-                                <span class="input_title">Postcode / Zip<sup>*</sup></span>
-                                <input type="text" name="postal_code">
-                            </div>
-
-                            <div class="form_item">
-                                <span class="input_title">County<sup>*</sup></span>
-                                {{order_form.country}}
-                            </div>
-
-
-                            <div class="form_item">
-                                <span class="input_title">Phone<sup>*</sup></span>
-                                <input type="tel" name="phone_number">
-                            </div>
-
-                            <div class="form_item">
-                                <span class="input_title">Email Address<sup>*</sup></span>
-                                <input type="email" name="email_address">
-                            </div>
-                        </div>
-                    </form>
-                {% else %}
-                    <div class="row">
-                        {% for obj in buyer_address %}
-                            <div class="col-sm-6">
-                                <div class="form-check">
-
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <p class=" float-end text-warning m-0">Edit</p>
-                                            <input class="form-check-input" type="radio" name="exampleRadios"
-                                                   id="exampleRadios1"
-                                                   value="option1">
-                                            <p class=" m-0">{{ obj.first_name }}&nbsp;{{ obj.last_name }}</p>
-                                            <p class=" m-0">({{ obj.phone_number }})</p>
-                                            <p class="  m-0">{{ obj.city }}&nbsp;{{ obj.country }}&nbsp;{{ obj.country }} </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                {% endif %}
-
-                <div class="checkbox_item mb_30 mt-4">
-
-                    <label for="ship_address_checkbox">
-                        <input id="ship_address_checkbox" type="checkbox">
-                        Ship
-                        to a
-                        different address?</label>
-                </div>
-
-                <form action="#" id="shipping_form" style="display:none ">
-
-
-                    <h3 class="form_title mb_30 mt-4">Shipping details</h3>
+            <form method="post">
+                {% csrf_token %}
+                <!-- Billing info start -->
+                <div class="billing_form mb_50">
+                    <h3 class="form_title mb_30">Billing details</h3>
                     <div class="form_wrap card">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form_item">
-                                    <span class="input_title">First Name<sup>*</sup></span>
-                                    <input type="text" name="firstname">
-                                </div>
-                            </div>
+                        {{ form|crispy }}
 
-                            <div class="col-lg-6">
-                                <div class="form_item">
-                                    <span class="input_title">Last Name<sup>*</sup></span>
-                                    <input type="text" name="lastname">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="form_item">
-                            <span class="input_title">Company Name<sup>*</sup></span>
-                            <input type="text" name="company">
-                        </div>
-
-                        <div class="form_item">
-                            <span class="input_title">Address<sup>*</sup></span>
-                            <input type="text" name="address" placeholder="House number and street name">
-                        </div>
-
-                        <div class="form_item">
-                            <span class="input_title">Town/City<sup>*</sup></span>
-                            <input type="text" name="city">
-                        </div>
-
-                        <div class="form_item">
-                            <span class="input_title">County<sup>*</sup></span>
-                            <input type="text" name="county">
-                        </div>
-
-                        <div class="form_item">
-                            <span class="input_title">Postcode / Zip<sup>*</sup></span>
-                            <input type="text" name="postcode">
-                        </div>
-
-                        <div class="form_item">
-                            <span class="input_title">Phone<sup>*</sup></span>
-                            <input type="tel" name="phone">
-                        </div>
-
-                        <div class="form_item">
-                            <span class="input_title">Email Address<sup>*</sup></span>
-                            <input type="email" name="email">
-                        </div>
                     </div>
-                </form>
 
-            </div>
-            <div class="billing_form aos-init" data-aos="fade-up" data-aos-duration="2000">
-                <h3 class="form_title mb_30">Your order</h3>
-                <form action="#">
-                    <div class="form_wrap card">
-                        <div class="checkout_table table-responsive">
-                            <table class="table text-center mb_50">
-                                <thead class="text-uppercase text-uppercase">
-                                <tr>
-                                    <th>Product Name</th>
-                                    <th>Price</th>
-                                    <th>Quantity</th>
-                                    <th>Total</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for obj in cart %}
-                                    <tr>
-                                        <td>
-                                            <div class="cart_product">
-                                                <div class="item_image">
-                                                    <img src="{{ obj.product.thumbnail_image|image_or_placeholder }}"
-                                                         alt="image_not_found">
-                                                </div>
-                                                <div class="item_content">
-                                                    <h4 class="item_title mb_0">{{ obj.product.title }}</h4>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
+
+                    <div class="billing_form aos-init" data-aos="fade-up" data-aos-duration="2000">
+                        <h3 class="form_title mb_30">Your order</h3>
+                        <form action="#">
+                            <div class="form_wrap card">
+                                <div class="checkout_table table-responsive">
+                                    <table class="table text-center mb_50">
+                                        <thead class="text-uppercase text-uppercase">
+                                        <tr>
+                                            <th>Product Name</th>
+                                            <th>Price</th>
+                                            <th>Quantity</th>
+                                            <th>Total</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        {% for obj in cart %}
+                                            <tr>
+                                                <td>
+                                                    <div class="cart_product">
+                                                        <div class="item_image">
+                                                            <img src="{{ obj.product.thumbnail_image|image_or_placeholder }}"
+                                                                 alt="image_not_found">
+                                                        </div>
+                                                        <div class="item_content">
+                                                            <h4 class="item_title mb_0">{{ obj.product.title }}</h4>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td>
                                     <span class="price_text">{% if obj.product_weight %}
                                         {{ obj.product_weight.get_product_weight_discounted_price }}{% else %}
                                         {{ obj.product.get_price }}{% endif %}</span>
-                                        </td>
-                                        <td>
-                                            <span class="quantity_text">{{ obj.quantity }}</span>
-                                        </td>
-                                        <td> <span class="total_price">
+                                                </td>
+                                                <td>
+                                                    <span class="quantity_text">{{ obj.quantity }}</span>
+                                                </td>
+                                                <td> <span class="total_price">
                                             {% if obj.product_weight %}
                                                 {{ obj.quantity|multiply:obj.product_weight.get_product_weight_discounted_price }}
                                             {% else %}
                                                 {{ obj.quantity|multiply:obj.product.get_price }}
                                             {% endif %}
                                         </span>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
 
-                                <tr>
-                                    <td class="text-left">
-                                        <span class="subtotal_text">SHIPPING CHARGES</span>
-                                    </td>
-                                    <td></td>
-                                    <td></td>
-                                    <td>
-                                        <span class="total_price">{{ shipping_charges|floatformat:2 }}</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-left">
-                                        <span class="subtotal_text">TOTAL</span>
-                                    </td>
-                                    <td></td>
-                                    <td></td>
-                                    <td>
-                                        <span class="total_price">{{ sub_total|floatformat:2 }}</span>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                                        <tr>
+                                            <td class="text-left">
+                                                <span class="subtotal_text">SHIPPING CHARGES</span>
+                                            </td>
+                                            <td></td>
+                                            <td></td>
+                                            <td>
+                                                <span class="total_price">{{ shipping_charges|floatformat:2 }}</span>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-left">
+                                                <span class="subtotal_text">TOTAL</span>
+                                            </td>
+                                            <td></td>
+                                            <td></td>
+                                            <td>
+                                                <span class="total_price">{{ sub_total|floatformat:2 }}</span>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
 
-                        <div class="billing_payment_mathod">
-                            <ul class="ul_li_block clearfix">
-                                <li>
-                                    <div class="checkbox_item mb_15 pl-0">
-                                        <label for="bank_transfer_checkbox"><input id="bank_transfer_checkbox"
-                                                                                   type="checkbox" checked=""> Direct
-                                            Bank
-                                            Transfer</label>
-                                    </div>
-                                    <p class="mb_0">
-                                        Make your payment directly into our bank account. Please use your Order
-                                        ID as the payment reference. Your order will not be shipped until the
-                                        funds have cleared in our account.
-                                    </p>
-                                </li>
-
-                                <li>
-                                    <div class="checkbox_item mb_0 pl-0">
-                                        <label for="check_payments"><input id="check_payments" type="checkbox">Check
-                                            Payments</label>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="checkbox_item mb_0 pl-0">
-                                        <label for="cash_delivery"><input id="cash_delivery" type="checkbox">
-                                            Cash On Delivery</label>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="checkbox_item mb_0 pl-0">
-                                        <label for="paypal_checkbox"><input id="paypal_checkbox" type="checkbox">
-                                            Paypal</label>
-                                    </div>
-                                </li>
-                            </ul>
-                            <button type="submit" class="custom_btn bg_default_red">PLACE ORDER</button>
-                        </div>
+                                <div class="billing_payment_mathod">
+                                    <button type="submit" class="custom_btn bg_default_red">PLACE ORDER</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </section>
 
