--- a/src/administration/client/templates/client/order_list.html
+++ b/src/administration/client/templates/client/order_list.html
@@ -1,4 +1,5 @@
 {% extends  'website/base.html' %}
+{% load custom_tags %}
 {% load static %}
 
 {% block content %}
@@ -15,44 +16,55 @@
                                     <h3>My Orders</h3>
                                 </div>
                                 <div class="row">
-                                    {% for object in '12345' %}
-                                        <div class="col-sm-12 m-2">
-                                            <div class="card">
-                                                <div class="card-body">
-                                                    <label style="font-size: 22px"><b>Requested on 01 sep
-                                                        2023</b></label>
-                                                    <p class="float-end fs-11">Order#123445566</p>
-                                                    <div class="row align-items-end mt-3 mb-3">
-                                                        <div class="col-sm-4">
-                                                            <div class="d-flex position-relative">
-                                                                <img src="{% static 'website/images/meta/meta1.png' %}"
-                                                                     style="height: 70px;"
-                                                                     class="flex-shrink-0 me-3 avatar-xl rounded"
-                                                                     alt="...">
-                                                                <div>
-                                                                    <p class="mt-0">dryfruit of mix fresh of new and
-                                                                        organic</p>
-                                                                </div>
-                                                                <div>
+                                    {% if object_list %}
+                                        {% for object in object_list %}
+                                            <div class="col-sm-12 m-2">
+                                                <div class="card">
+                                                    <div class="card-body">
+                                                        <label style="font-size: 22px"><b>Order on {{ object.created_on.date }}</b></label>
+                                                        <p class="float-end fs-11">Order#{{ object.id }}</p>
+                                                        <div class="row align-items-end mt-3 mb-3">
+                                                            <div class="col-sm-4">
+                                                                <div class="d-flex position-relative">
+                                                                    <img src="{% static 'website/images/order.png' %}"
+                                                                         style="height: 90px;"
+                                                                         class="flex-shrink-0 me-3 avatar-xl rounded"
+                                                                         alt="...">
+                                                                    <div>
+                                                                        <p class=""><b>{{ object.full_name }}</b></p>
+                                                                        <p class="mt-0">{{ object.contact }}</p>
+                                                                    </div>
                                                                 </div>
                                                             </div>
-                                                        </div>
-                                                        <div class="col-sm-4 text-center">
-                                                            <div>
-                                                                <p class="mt- text-warning ">Qty:1 </p>
+                                                            <div class="col-sm-4 text-center">
+                                                                <div>
+                                                                    <p ><b class="text-center">&nbsp;&nbsp;Order Status&nbsp;&nbsp;:</b>&nbsp;&nbsp;<span>{{ object.order_status }}</span> </p>
+                                                                    <p ><b class="text-center">Payment Status&nbsp;&nbsp;:</b>&nbsp;&nbsp;{{ object.payment_status }} </p>
+                                                                    <p ><b class="text-center">Payment Type&nbsp;&nbsp;:</b>&nbsp;&nbsp;{{ object.payment_type }} </p>
+                                                                </div>
                                                             </div>
-                                                        </div>
-                                                        <div class="col-sm-4 text-end">
-                                                            <a href="{% url 'client:order_detail' %}"
-                                                               style="background-color: #f5b23c"
-                                                               class="p-1 px-2 text-white">Order Detail
-                                                            </a>
+                                                            <div class="col-sm-4 text-center">
+                                                                    <p ><b class="text-center">Sub Total&nbsp;&nbsp;:</b>&nbsp;&nbsp;{{ object.sub_total|floatformat:"2" }} </p>
+                                                                    <p ><b class="text-center">Shipping Charges&nbsp;&nbsp;:</b>&nbsp;&nbsp;{{ object.shipping_charges|floatformat:"2" }} </p>
+                                                                <a href="{% url 'client:order_detail' object.id %}"
+                                                                   style="background-color: #f5b23c"
+                                                                   class="p-1 px-2 text-white">Order Detail
+                                                                </a>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
+                                        {% endfor %}
+                                    {% else %}
+                                        <div class="col-sm-12 m-2">
+                                            <div class="card">
+                                                <div class="card-body">
+                                                    <label style="font-size: 22px" class="text-danger"><b>Orders Not Found</b></label>
+                                                </div>
+                                            </div>
                                         </div>
-                                    {% endfor %}
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
